[package]
name = "tinyrt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bytes = "1.10.1"
dashmap = "6.1.0"
futures-util = "0.3.31"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
socketioxide = { version = "0.17.2", features = [
    "extensions",
    "state",
], optional = true }
tokio = { version = "1.47.1", features = ["net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "local-time",
], optional = true }

[features]
default = ["logging", "socketio_full"]
logging = ["dep:tracing-subscriber", "socketioxide?/tracing"]

socketio = ["dep:socketioxide"]
socketio_pub = ["socketio"]
socketio_sub = ["socketio"]
socketio_full = ["socketio", "socketio_pub", "socketio_sub"]

sse_dos_newlines = []
