[package]
name = "tinyrt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bytes = "1.10.1"
cfg-if = "1.0.3"
dashmap = "6.1.0"
futures-util = "0.3.31"
rmpv = { version = "1.3.0", features = ["with-serde"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.143", optional = true }
socketioxide = { version = "0.17.2", features = [
    "extensions",
    "state",
], optional = true }
tokio = { version = "1.47.1", features = ["net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.6", optional = true }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "local-time",
], optional = true }

[features]
default = ["logging", "permissive_cors", "socketio_full"]
logging = [
    "dep:tracing-subscriber",
    "socketioxide?/tracing",
    "tower-http/trace",
]
permissive_cors = ["tower-http/cors"]

socketio = ["dep:socketioxide", "dep:rmpv", "dep:serde"]
socketio_pub = ["socketio"]
socketio_sub = ["socketio"]
socketio_json = ["socketio", "dep:serde_json"]
socketio_full = ["socketio", "socketio_pub", "socketio_sub", "socketio_json"]

sse_dos_newlines = []
serde_json = ["dep:serde_json"]
tower-http = ["dep:tower-http"]
